--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  background-color: rgba(180, 173, 173, 0.1);
+  color: #000;
+  transition: background-color 0.3s, color 0.3s;
+  min-height: 99.7vh;
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  padding-bottom: 0.1rem;
+}
+
+body.dark-mode {
+  background-color: black !important;
+  color: white !important;
+}
+
+/* Prevent scrolling on the main content when menu is open */
+body.menu-open {
+  overflow: hidden;
+}
+
+.error-message {
+  text-align: center;
+  color: red;
+  margin-top: -1.5rem;
+  font-weight: bold;
+  font-size: 0.8rem;
+}
+
+.empty-state {
+  text-align: center;
+  margin-top: 20px;
+}
